Adjust logo to correct empty white space

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -18,7 +18,7 @@
 
 .Logo {
   z-index: 1;
-  opacity: 60%;
+  opacity: 30%;
   position: relative;
   top: 25%;
   height: 400px;
